# SkyPro-Homework

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  masks.py  processing.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py  widget.py
utils/: external_api.py  utils.py
